--- a/.gitignore
+++ b/.gitignore
@@ -9,8 +9,10 @@ bin/Debug/netcoreapp3.1/DistribuisciEsami.pdb
 
 bin/Debug/netcoreapp3.1/DistribuisciEsami.runtimeconfig.dev.json
 
-bin/Debug/netcoreapp3.1/DistribuisciEsami.runtimeconfig.json
+
 
 *.json
 
 *.txt
+
+*.pdb
